k3sdeploys/plex/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: plex
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        ports:
          - containerPort: 8989
            protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "256Gi"
            cpu: "0.5"
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: sonarr-nfs
          mountPath: /downloads
          subPath: transmission/downloads
        - name: sonarr-nfs
          mountPath: /tv
          subPath: series

      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: sonarr-nfs
        persistentVolumeClaim:
          claimName: transmission-nfs-pvc
